fix layout issues

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -43,3 +43,10 @@ body {
   right: 15px;
   bottom: 15px;
 }
+
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
